    - parted_server.c: use change_named in command_*() functions that
      change the partition table and unchange_named in command_commit()
      and command_undo(). 
    - parted_server.c (command_commit): commit only if named_is_changed
      returns true.  Closes: #235372.
    - parted_server.c (command_new_label): free the variable device.
  
 -- Anton Zinoviev <zinoviev@debian.org>  Wed,  3 Mar 2004 13:12:14 +0200

partman (12) unstable; urgency=low

  * Anton Zinoviev
    - new release
  * Joey Hess
    - reformatted the main screen
    - minor reformatting of the partition edit screen
    - rename hrule to divider
    - removed not very useful/redundant commit and abort choices from
      choose_partition
    - added a confirmation message on partman exit to make sure the user does
      not accidentially destroy his data
    - shorten title to work around cdebconf bug
    - change device_name to put the drive size before the device name
    - change menu item number to 42 so it's the default partitioner 
      (should this only be on i386?)
    - add a progress bar while partman is starting up. Closes: #235364
  * Christian Perrier
    - Corrected typo in templates and unfuzzy translations
  * Translations :
    - Miguel Figueiredo
      - Updated Portuguese translation (pt.po)
    - Stefano Canepa
      - Translated new header by Joey Hess and a new string
    - Bartosz Fenski
      - Updated Polish translation (pl.po)
    - Pierre Machard/Christian Perrier
      - Updated French translation (fr.po)
    - André Luís Lopes
      - Updated Brazilian Portuguese translation (pt_BR.po)
    - Kęstutis Biliūnas
      - Updated Lithuanian translation (lt.po)
    - Håvard Korsvoll
      - Added Norwegian, nynorsk translation (nn.po).
    - Peter Mann
      - Updated Slovak translation (sk.po)
    - Carlos Z.F. Liu
      - update Simplified Chinese translation (zh_CN.po)
    - Elian Myftiu
      - Updated Albanian translation (sq.po)
    - Jordi Mallach